# email-triage-env

./: .dockerignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
app/: email_generator.py  environment.py  models.py  server.py  tasks.py
server/: app.py
